<resources>
    <string name="app_name">Versus</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="pick_place">Choose a place</string>

    <string name="auth_with_mail">Login with Mail</string>
    <string name="auth_signin_text">Don\'t have an account ?</string>
    <string name="auth_signin">Sign In</string>
    <string name="auth_login_google">Login with Google</string>
    <string name="email_or_password_wrong_string">Email or Password wrong</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="mail">Mail</string>
    <string name="account_missing">Don\'t have an account ?</string>
    <string name="sign_in_intro">Sign In to Versus</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="zip_code">Zip Code</string>
    <string name="failure">Failed</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="planning_for_the_day_string">Planning for the day</string>
    <string name="_7_march___2023_string">7 March , 2023</string>
    <string name="s_m_t_w_th_fr_sat_string">S</string>
    <string name="_5_7_6_string">5</string>
    <string name="_6_string">6</string>
    <string name="_7_string">7</string>
    <string name="_8_string">8</string>
    <string name="_9_string">9</string>
    <string name="_10_string">10</string>
    <string name="_11_string">11</string>
    <string name="unil_sport_string">Unil-Sport</string>
    <string name="unil_sport_ek1_string">Unil-Sport</string>
    <string name="_02_30_pm_string">02:30 PM</string>
    <string name="_10_00_am_string">10:00 AM</string>
    <string name="your_timeline_string">Your Timeline</string>
    <string name="football_game_string">Football Game</string>
    <string name="basketball_game_string">BasketBall Game</string>
    <!-- frame_2 strings -->


    <string name="search_string">Rate your Friends !</string>

    <string name="soccer_string">Soccer</string>


    <string name="_25_3_2023_string">25/3/2023</string>

    <string name="_4_10_string">4/10</string>

    <string name="casual_game_string">Casual Game </string>

    <string name="aymane_lam_string">Aymane_Lam</string>

    <string name="rate_string">Rate</string>

    <string name="_7_10_string">7/10</string>

    <string name="tss_3atif_string">Tss_3atif</string>
    <string-array name="rating_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>

    </string-array>

    <string name="login_string">Login</string>
    <string name="enter_your_mail_string">Enter your mail</string>
    <string name="enter_your_password_string">Enter your password</string>
    <string name="did_you_forget_your_password___string">Did you forget your password ?</string>
    <string name="reset_it_string">Reset it</string>
    <string name="login_ek1_string">Login</string>
    <string name="you_can_also_sign_in_using_string">You can also Sign in using</string>
    <string name="google_string">Google</string>

    <string name="versus_string">VERSUS</string>
    <string name="welcome_to_our_app___string">Welcome to our app !</string>
    <string name="we_hope_that_you_enjoy_using_it_for_your_games_string">We hope that you enjoy using it for your games</string>
    <string name="register_string">Register</string>
    <string name="sign_in_string">Sign In</string>


    <!-- main_chat strings -->

    <string name="private_string">Private</string>
    <string name="posts_string">Posts</string>
    <string name="dec_13_string">5 min ago</string>
    <string name="_2_string">4</string>
    <string name="miracle_vaccaro_string">Ali Benta</string>
    <string name="dec_13_ek1_string">15 min ago</string>
    <string name="hello__how_are_you__string">Hello! How are you?</string>
    <string name="miracle_vaccaro_ek1_string">Alex De Bruyne</string>

    <!-- Register Fragment Layout resources-->
    <string name="create_your_account">Create Your Account</string>
    <string name="enter_info_to_create_account">Please enter info to create account</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="mail_already_used_string">Mail already used</string>
    <string name="passwords_are_not_similar_string">Passwords are not similar</string>
    <!-- -->

    <string name="verify_your_account_string">Verify Your Account</string>
    <string name="activation_text_string">Account activation link has been sent to the provided email address</string>
    <string name="send_it_again_string">Send it again</string>
    <string name="didn_t_get_the_mail___string">Didnt get the mail ?</string>
</resources>