<RelativeLayout
    android:id="@+id/auth_fragment_mail_validation"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout android:id="@+id/page_verfiy_mail_ek1"
        android:layout_marginTop="0px"
        android:layout_marginStart="0px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <View android:background="@drawable/auth_card_shape"
            android:layout_marginStart="41px"
            android:layout_marginTop="343px"
            android:layout_width="1000px"
            android:layout_height="1800px" />

        <ImageView android:id="@+id/vector"
            android:src="@drawable/saly__"
            android:contentDescription="vector"
            android:layout_marginStart="440px"
            android:layout_marginTop="219px"
            android:layout_width="200px"
            android:layout_height="247.45px" />

        <TextView android:id="@+id/verify_your_account"
            android:fontFamily="@font/poppins_medium"
            android:layout_gravity="center_horizontal|center"
            android:gravity="center"
            android:textSize="70px"
            android:textColor="@color/verify_your_account_color"
            android:layout_marginLeft="183px"
            android:layout_marginTop="608px"
            android:layout_width="732px"
            android:layout_height="154px"
            android:text="@string/verify_your_account_string"
            />

        <TextView android:id="@+id/activation_text"
            android:fontFamily="Poppins"
            android:layout_gravity="center_horizontal|center"
            android:gravity="center"
            android:textSize="40px"
            android:textColor="@color/activation_text_color"
            android:layout_marginLeft="83px"
            android:layout_marginTop="1243px"
            android:layout_width="925px"
            android:layout_height="148px"
            android:text="@string/activation_text_string"
            />


        <RelativeLayout android:id="@+id/send_again"
            android:layout_marginTop="2031px"
            android:layout_marginStart="183px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView android:id="@+id/send_it_again"
                android:fontFamily="Poppins"
                android:layout_gravity="center_horizontal|center"
                android:gravity="center"
                android:textSize="40px"
                android:textColor="@color/activation_text_color"
                android:layout_marginLeft="443px"
                android:layout_marginTop="0px"
                android:layout_width="291px"
                android:layout_height="88px"
                android:text="@string/send_it_again_string" />

            <TextView android:id="@+id/didn_t_get_the_mail__"
                android:fontFamily="Poppins"
                android:layout_gravity="center_horizontal|center"
                android:gravity="center"
                android:textSize="40px"
                android:textColor="@color/activation_text_color"
                android:layout_marginLeft="-7px"
                android:layout_marginTop="0px"
                android:layout_width="427px"
                android:layout_height="88px"
                android:text="@string/didn_t_get_the_mail___string"
                />

        </RelativeLayout>

        <ImageView android:src="@drawable/ic_send_mail"
            android:contentDescription="vector_ek1"
            android:layout_marginStart="390px"
            android:layout_marginTop="1007px"
            android:layout_width="300px"
            android:layout_height="162.5px" />

    </RelativeLayout>

</RelativeLayout>