<RelativeLayout android:id="@+id/content_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View android:id="@+id/register_card"
        android:background="@drawable/auth_card_shape"
        android:layout_marginStart="32dp"
        android:layout_marginTop="106dp"
        android:layout_width="327dp"
        android:layout_height="693dp" />

    <ImageView android:id="@+id/saly_1"
        android:src="@drawable/saly_1"
        android:layout_marginStart="229dp"
        android:layout_marginTop="0dp"
        android:layout_width="163dp"
        android:layout_height="163dp" />

    <RelativeLayout android:id="@+id/register_heading_text"
        android:layout_marginTop="132dp"
        android:layout_marginStart="63dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/create_your_account"
            android:fontFamily="@font/poppins_medium"
            android:layout_gravity="center_horizontal|center"
            android:gravity="center"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/create_your_account_color"
            android:layout_marginStart="-12px"
            android:layout_marginTop="0dp"
            android:layout_width="280dp"
            android:layout_height="56dp"
            android:text="@string/create_your_account" />

        <TextView
            android:id="@+id/please_enter_info_to_create_account"
            android:fontFamily="@font/poppins_medium"
            android:layout_gravity="center_horizontal|center"
            android:gravity="center"
            android:textSize="12sp"
            android:textColor="@color/create_your_account_color"
            android:layout_marginStart="18dp"
            android:layout_marginTop="33dp"
            android:layout_width="232dp"
            android:layout_height="77.5px"
            android:text="@string/enter_info_to_create_account" />

    </RelativeLayout>

    <RelativeLayout android:id="@+id/firstnamefield"
        android:layout_marginTop="209dp"
        android:layout_marginStart="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/rectangle_40"
            android:background="@drawable/auth_register_field_shape"
            android:layout_marginStart="0dp"
            android:layout_marginTop="11dp"
            android:layout_width="294dp"
            android:layout_height="40dp" />

        <View
            android:id="@+id/rectangle_41"
            android:background="@drawable/auth_rectangle_41_shape"
            android:layout_marginStart="28dp"
            android:layout_marginTop="0dp"
            android:layout_width="90dp"
            android:layout_height="22dp" />

        <TextView
            android:id="@+id/first_name"
            android:fontFamily="@font/poppins_medium"
            android:layout_gravity="center_horizontal|center"
            android:gravity="center"
            android:textSize="13sp"
            android:textStyle="bold"
            android:textColor="@color/first_name_color"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="0dp"
            android:layout_width="99dp"
            android:layout_height="32dp"
            android:text="@string/first_name" />

    </RelativeLayout>

    <RelativeLayout android:id="@+id/lastnamefield"
        android:layout_marginTop="281dp"
        android:layout_marginStart="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/rectangle_40_ek1"
            android:background="@drawable/auth_register_field_shape"
            android:layout_marginStart="0dp"
            android:layout_marginTop="11dp"
            android:layout_width="294dp"
            android:layout_height="40dp" />

        <View
            android:id="@+id/rectangle_41_ek1"
            android:background="@drawable/auth_rectangle_41_ek1_shape"
            android:layout_marginStart="28dp"
            android:layout_marginTop="0dp"
            android:layout_width="90dp"
            android:layout_height="22dp" />

        <TextView
            android:id="@+id/last_name"
            android:fontFamily="@font/poppins_medium"
            android:layout_gravity="center_horizontal|center"
            android:gravity="center"
            android:textSize="13sp"
            android:textStyle="bold"
            android:textColor="@color/first_name_color"
            android:layout_marginLeft="34dp"
            android:layout_marginTop="1dp"
            android:layout_width="82dp"
            android:layout_height="30dp"
            android:text="@string/last_name" />

    </RelativeLayout>

    <RelativeLayout android:id="@+id/email_field"
        android:layout_marginTop="353dp"
        android:layout_marginStart="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/rectangle_40_ek2"
            android:background="@drawable/auth_register_field_shape"
            android:layout_marginStart="0dp"
            android:layout_marginTop="11dp"
            android:layout_width="294dp"
            android:layout_height="40dp" />

        <View
            android:id="@+id/rectangle_41_ek2"
            android:background="@drawable/auth_rectangle_41_ek2_shape"
            android:layout_marginStart="28dp"
            android:layout_marginTop="0dp"
            android:layout_width="114dp"
            android:layout_height="21dp" />

        <TextView
            android:id="@+id/email_address"
            android:fontFamily="@font/poppins_medium"
            android:layout_gravity="center_horizontal|center"
            android:gravity="center"
            android:textSize="13sp"
            android:textStyle="bold"
            android:textColor="@color/first_name_color"
            android:layout_marginLeft="34dp"
            android:layout_marginTop="0dp"
            android:layout_width="107dp"
            android:layout_height="30dp"
            android:text="@string/email_address"
            />

    </RelativeLayout>

    <RelativeLayout android:id="@+id/phonefield"
        android:layout_marginTop="425dp"
        android:layout_marginStart="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/rectangle_40_ek3"
            android:background="@drawable/auth_register_field_shape"
            android:layout_marginStart="0dp"
            android:layout_marginTop="11dp"
            android:layout_width="294dp"
            android:layout_height="40dp" />

        <View
            android:id="@+id/rectangle_41_ek3"
            android:background="@drawable/auth_rectangle_41_ek3_shape"
            android:layout_marginStart="28dp"
            android:layout_marginTop="0dp"
            android:layout_width="123dp"
            android:layout_height="21dp" />

        <TextView
            android:id="@+id/phone_number"
            android:fontFamily="@font/poppins_medium"
            android:layout_gravity="center_horizontal|center"
            android:gravity="center"
            android:textSize="13sp"
            android:textStyle="bold"
            android:textColor="@color/first_name_color"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="0dp"
            android:layout_width="112dp"
            android:layout_height="30dp"
            android:text="@string/phone_number" />

    </RelativeLayout>

    <RelativeLayout android:id="@+id/passwordfield"
        android:layout_marginTop="536dp"
        android:layout_marginStart="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/rectangle_40_ek4"
            android:background="@drawable/auth_register_field_shape"
            android:layout_marginStart="0dp"
            android:layout_marginTop="11dp"
            android:layout_width="294dp"
            android:layout_height="40dp" />

        <View
            android:id="@+id/rectangle_41_ek4"
            android:background="@drawable/auth_rectangle_41_ek4_shape"
            android:layout_marginStart="28dp"
            android:layout_marginTop="0dp"
            android:layout_width="85dp"
            android:layout_height="21dp" />

        <TextView
            android:id="@+id/password"
            android:fontFamily="@font/poppins_medium"
            android:layout_gravity="center_horizontal|center"
            android:gravity="center"
            android:textSize="13sp"
            android:textStyle="bold"
            android:textColor="@color/first_name_color"
            android:layout_marginLeft="34dp"
            android:layout_marginTop="0dp"
            android:layout_width="76dp"
            android:layout_height="30dp"
            android:text="@string/password" />

    </RelativeLayout>

    <RelativeLayout android:id="@+id/confirmpasswordfield"
        android:layout_marginTop="608dp"
        android:layout_marginStart="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/rectangle_40_ek5"
            android:background="@drawable/auth_register_field_shape"
            android:layout_marginStart="0dp"
            android:layout_marginTop="11dp"
            android:layout_width="294dp"
            android:layout_height="40dp" />

        <View
            android:id="@+id/rectangle_41_ek5"
            android:background="@drawable/auth_rectangle_41_ek5_shape"
            android:layout_marginStart="28dp"
            android:layout_marginTop="0dp"
            android:layout_width="145dp"
            android:layout_height="21dp" />

        <TextView
            android:id="@+id/confirm_password"
            android:fontFamily="@font/poppins_medium"
            android:layout_gravity="center_horizontal|center"
            android:gravity="center"
            android:textSize="13sp"
            android:textStyle="bold"
            android:textColor="@color/first_name_color"
            android:layout_marginLeft="34dp"
            android:layout_marginTop="0dp"
            android:layout_width="136dp"
            android:layout_height="30dp"
            android:text="@string/confirm_password"
            />
    </RelativeLayout>

    <RelativeLayout android:id="@+id/register_btn"
        android:background="@drawable/rectangle_1_shape"
        android:layout_marginTop="719dp"
        android:layout_marginStart="105dp"
        android:layout_width="181dp"
        android:layout_height="54dp">

        <TextView
            android:id="@+id/register"
            android:fontFamily="@font/poppins_medium"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="21sp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register" />

    </RelativeLayout>

</RelativeLayout>